--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,27 +1,111 @@
-* { margin: 0; padding: 0; }
+* { margin: 0; padding: 0;  }
 
-#right {
+ul {
+    list-style: square;
+    margin-left: 32px;
+}
+
+li {
+    margin-bottom: 12px;
+}
+
+a {
+    text-decoration: none;
+}
+
+cite {
+    font-size: small;
+    float: right;
+    margin-top: 4px;
+}
+
+.right, .left {
     position: fixed;
     top: 0;
-    left: 0;
-    width: 50vw;
     height: 100vh;
+}
+
+.left {
+    left: 0;
+    width: 30vw;
     background-color: black;
+    color: lime;
+    font-family: "Courier New", Courier, monospace;
+    font-size: 26px;
+}
+
+.right {
+    right: 0;
+    width: 70vw;
+    background-color: white;
+    color: black;
+    font-family: Georgia;
+    font-size: 36px;
+}
+
+.overview {
+    margin: 44px 10px 0 10px;
+}
+
+.left h1 {
+    font-weight: normal;
+    font-size: 40px;
+}
+
+.left a {
     color: lime;
 }
 
-#left {
-    position: fixed;
-    top: 0;
-    right: 0;
-    width: 50vw;
-    height: 100vh;
-    background-color: white;
-    color: black;
+.left a:hover {
+    color: orange;
+}
 
+.content {
+    margin: 40px;
+}
+
+.right h2 {
+    margin-bottom: 8px;
+}
+
+.right b {
+    color: orange;
+}
+
+.right b.subtle {
+    color: lightgray;
+}
+
+.right ol {
+    margin-left: 55px;
+}
+
+.right #footer {
+    position: fixed;
+    bottom: 30px;
+    width: 50%;
+}
+
+.right .pagination {
+    list-style: none;
     display: flex;
-    align-items: center;
     justify-content: center;
-    font-size: 40px;
-    font-family: Georgia;
+    margin: 0;
+}
+
+.pagination li {
+    display: inline-block;
+    margin-right: 16px;
+}
+
+.pagination li a {
+    display: block;
+    width: 20px;
+    height: 20px;
+    border-radius: 10px;
+    background-color: lightgray;
+}
+
+code {
+    font-size: 26px;
 }
