--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -19,24 +19,24 @@ cite {
     margin-top: 4px;
 }
 
-.right, .left {
+.menu {
     position: fixed;
     top: 0;
-    height: 100vh;
-}
-
-.left {
-    left: 0;
-    width: 30vw;
+    height: 100%;
+    width: 480px;
+    left: -440px;
     background-color: black;
     color: lime;
     font-family: "Courier New", Courier, monospace;
     font-size: 26px;
+    transition: transform .2s;
+}
+
+.menu:hover {
+    transform: translateX(440px);
 }
 
 .right {
-    right: 0;
-    width: 70vw;
     background-color: white;
     color: black;
     font-family: Georgia;
@@ -47,21 +47,23 @@ cite {
     margin: 44px 10px 0 10px;
 }
 
-.left h1 {
+.menu h1 {
     font-weight: normal;
     font-size: 40px;
 }
 
-.left a {
+.menu a {
     color: lime;
 }
 
-.left a:hover {
+.menu a:hover {
     color: orange;
 }
 
 .content {
-    margin: 40px;
+    padding: 40px;
+    max-width: 980px;
+    margin: 0 auto;
 }
 
 .right h2 {
@@ -82,8 +84,9 @@ cite {
 
 .right #footer {
     position: fixed;
+    left: 0;
+    right: 0;
     bottom: 30px;
-    width: 50%;
 }
 
 .right .pagination {
@@ -108,4 +111,24 @@ cite {
 
 code {
     font-size: 26px;
+}
+
+.stack-wrapper, .explained {
+    float: left;
+}
+
+.explained code {
+    font-size: 24px;
+    margin: -40px 0 0 10px;
+}
+
+.stack {
+    font-family: "Courier New", Courier, monospace;
+    text-align: center;
+    width: 400px;
+    border: 4px solid gray;
+    border-radius: 4px;
+    background-color: black;
+    color: lime;
+    margin-bottom: 4px;
 }
