--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -71,7 +71,7 @@ cite {
 }
 
 .right b {
-    color: orange;
+    color: lime;
 }
 
 .right b.subtle {
@@ -113,13 +113,20 @@ code {
     font-size: 26px;
 }
 
+i.var {
+    color: lime;
+}
+
 .stack-wrapper, .explained {
     float: left;
 }
 
+.explained {
+    margin: -40px 0 0 10px;
+}
+
 .explained code {
     font-size: 24px;
-    margin: -40px 0 0 10px;
 }
 
 .stack {
